2021-10-21  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'new_qla_fw'

	updated QLogic firmware to the latest version

2021-10-14  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'celer_clean_fix'

	fixed build issue for the Celerity FC driver

	Merge branch 'rc_network_sort'

	rc.network: updated to accept the "None" bootproto value which does not configure an IP address (no DHCP, no Static) and only sets the MTU of an interface, sort network.conf interface sections alphabetically so bondX's are configured before brX's

2021-10-13  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch '20211008_tweaks'

	applied several Makefile fixes/tweaks for kernel driver builds; updated sysctl.conf for virtual memory settings

2021-10-05  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'virbr_fix'

	rc.network: use '^' in front of each interface name regex match so we match starting from the beginning of the string (eg, so we don't match 'virbr0')

2021-09-30  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'add_cacerts'

	added the 'cacerts' package (SSL root CA certificates)

2021-09-28  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'add_wget'

	added the real 'wget' program and disabled the Busybox variant

2021-09-26  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch '20210924_changes'

	updated bash to version 5.1.8 (fixes leaked FD issue when .bash_history is empty); use 'set -e' when calling inject.sh so we exit on any errors; set nvme_core 'admin_timeout' to 5s in rc.2

2021-09-23  Marc A. Smith  <marc.smith@quantum.com>

	fixed issue in esos2iso script (new archived/compressed image name)

	Merge branch 'bigger_esos_root'
